--- a/index.html
+++ b/index.html
@@ -59,8 +59,6 @@
 
                     <h2>Congratulations!</h2>
 
-                    <p>You have won the game and found all 8 pairs of cards.</p>
-
                     <img class="modal-img" src="images/Vault-Boy-Thumb-Up.jpg" alt="Vault boy giving the thumbs up from the game fall out">
 
                     <button class="btn play-again-btn">Play Again?</button>
@@ -350,20 +348,22 @@
     resetEverything();
   });
 
-  var myMusic= document.getElementById("music");
-function play() {
-myMusic.play();
-}
+var myMusic= document.getElementById("music");
+  function play() {
+  myMusic.play();
+  }
 
-function pause() {
-myMusic.pause();
-}
-      </script>
+  function pause() {
+  myMusic.pause();
+  }
 
-      <!-- JavaScript end -->
+</script>
+
+<!-- JavaScript end -->
+
 </body>
 
-<div class="footer"> <!--Footer-->
+<div class="footer2"> <!--Footer-->
     <p>Project Creating a game @ <a href="https://muizzh.github.io/">Muhamad Muizzuddin</a> (2021)
     <a href="https://www.instagram.com/" class="fa fa-instagram"></a>
     <a href="https://www.facebook.com/MuizzHamzah" class="fa fa-facebook"></a>
