--- a/index.html
+++ b/index.html
@@ -42,7 +42,18 @@
              <button class="btn reset-btn" style="font-size: 1em;">Reset <i class="fa fa-repeat"></i></button>
             </div>
 
-            
+          <div class="gamedes">
+              <h5 class="s">Game Description: </h5>
+              <ol class='s1'>
+                <li>Memory Game.</li>
+                <li>Find and Match the same cards.</li>
+                <li>To get a 3 STAR, your moves must not me more than 30. Where as the star will decrease -1 and if more than 45, another star.</li>
+                <li>After you solve the game, your score will be display.</li>
+                <li>Any feedbacks, you can click on the footer name.</li>
+                
+              </ol>
+          </div>
+
         </section>
 
         <section class="win-game-modal">
@@ -62,14 +73,15 @@
     </div>
 
 <!-- Audio Autoplay -->
-    <audio controls id="music" controls autoplay>
-      <source src="Worry Worry Worry - The Three Suns - Fallout 4 Soundtrack.mp3" type="audio/ogg">
-      <source src="Worry Worry Worry - The Three Suns - Fallout 4 Soundtrack.mp3" type="audio/mpeg">
+    <audio controls id="music" autoplay>
+      <source src="Worry Worry Worry - The Three Suns - Fallout 4 Soundtrack.mp3" type="audio/ogg" loop="true">
+      <source src="Worry Worry Worry - The Three Suns - Fallout 4 Soundtrack.mp3" type="audio/mpeg" loop="true">
     </audio>
 
 <script src='js/script.js'></script>
 
 </body>
+
 <!--Footer-->
 <div class="footer2"> 
     <p>Mix and match @ <a href="https://muizzh.github.io/">Muhamad Muizzuddin</a> (2021)
